--- a/pages/trading/index.html
+++ b/pages/trading/index.html
@@ -12,3 +12,26 @@ permalink: /trading
         <h1>The Premier Platform for Binary Options Trading</h1>
     </div>
 </div>
+<div class="grid">
+    <div class="col-12">
+        <h1>Fluid Typography Sass Mixin</h1>
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit iusto adipisci, cupiditate animi, itaque qui aspernatur vel corrupti labore minima, excepturi ab, fuga rem dolores. Ratione sunt autem iusto aliquid.
+        </p>
+
+        <h2>Heading 2</h2>
+
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit iusto adipisci, cupiditate animi, itaque qui aspernatur vel corrupti labore minima, excepturi ab, fuga rem dolores. Ratione sunt autem iusto aliquid.
+        </p>
+
+        <ul>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List Item 3</li>
+        </ul>
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit iusto adipisci, cupiditate animi, itaque qui aspernatur vel corrupti labore minima, excepturi ab, fuga rem dolores. Ratione sunt autem iusto aliquid.
+        </p>
+    </div>
+</div>
