added modal for mobile view to prevent scroll

--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -4,9 +4,9 @@ permalink: /portfolio
 ---
 <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <header>
+        <div class="header">
             <img class="logo" src= {{ "/assets/img/binary-logo.svg" | prepend: site.github.url | replace: 'http://', 'https://' }} alt="Welcome" height="100" width="250"></img>
-        </header>
+        </div>
         <h1>The Premier Platform for Binary Options Trading</h1>
     </div>
 </div>
