made modal dialog full screen

--- a/pages/trading/index.html
+++ b/pages/trading/index.html
@@ -7,7 +7,7 @@ permalink: /trading
         <div class="header">
             <img class="logo" src= {{ "/assets/img/binary-logo.svg" | prepend: site.github.url | replace: 'http://', 'https://' }} alt="Welcome" height="100" width="250"></img>
         </div>
-        <h1>Fluid Typography Sass Mixin</h1>
+        <h1>Header 1</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
@@ -33,11 +33,11 @@ permalink: /trading
     role="alertdialog"
     aria-labelledby="mdc-dialog-with-list-label"
     aria-describedby="mdc-dialog-with-list-description">
-    <div class="mdc-dialog__surface">
+    <div class="mdc-dialog__surface set-height full set-width full">
       <header class="mdc-dialog__header">
           <h2 id="mdc-dialog-with-list-label" class="mdc-dialog__header__title">Select Ipsum/Lorem</h2>
       </header>
-      <section id="mdc-dialog-with-list-description" class="mdc-dialog__body mdc-dialog__body--scrollable">
+      <section id="mdc-dialog-with-list-description" class="mdc-dialog__body mdc-dialog__body--scrollable set-height max-eighty">
           <ul class="mdc-list">
             <li class="mdc-list-item">Lorem</li>
             <li class="mdc-list-item">Ipsum</li>
